--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <!-- Header -->
     <header id="header">
         <div class="logo">
-            <a routerLink="/rules" class="article-link"><span class="fa fa-diamond fa-2x icon"> </span></a>
+            <a routerLink="/quest" class="article-link"><span class="fa fa-diamond fa-2x icon"> </span></a>
         </div>
         <div class="content">
             <div class="inner">
