--- a/src/app/components/utility/encounter-accordion/encounter-accordion.component.scss
+++ b/src/app/components/utility/encounter-accordion/encounter-accordion.component.scss
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
+    font-size: 16px;
 }
 
 .badge a{
@@ -70,4 +71,12 @@ h4 .icon{
 
 h4:hover .icon{
     opacity: 1;
+}
+
+.white-line{
+    background-color: white;
+}
+
+.tag-label{
+    font-size: 14px;
 }
