Added Spell and Rules page

--- a/src/app/components/articles/quest-article-update/quest-article-update.component.html
+++ b/src/app/components/articles/quest-article-update/quest-article-update.component.html
@@ -6,7 +6,7 @@
                 <i class="btn btn-outline-secondary icon fa fa-times float-right" id="article"></i>
             </a>
             <h2 class="text-center">
-                Updating Quest {{ model.name }}
+                Updating Organization {{ model.name }}
             </h2>
         </div>
         
