--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,7 +18,7 @@
         <ul class="navbar-nav">
             <!-- Recent Updates -->
             <li class="nav-item mr-3 ml-3">
-                <a routerLink="/rules" class="button nav-link nav-link-text"> Recent Updates </a>
+                <a routerLink="/recent-updates" class="button nav-link nav-link-text"> Recent Updates </a>
             </li>
             <!-- Rules -->
             <li class="nav-item mr-3 ml-3">
