--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -19,14 +19,7 @@
             ></app-textfield>
         </div>
 
-        <div class="float-right">
-            <i *ngIf="!isArticleDeleteState" class="btn btn-outline-danger fa fa-trash" (click)="toggleDeleteRequest()"></i>
-            <div *ngIf="isArticleDeleteState" class="delete-request">
-                <span class="mr-3"> <strong>Delete this article?</strong> </span>  
-                <button class="btn btn-outline-danger float-right mr-2" (click)="deleteArticle(diaryEntry.pk)"> Yes </button>
-                <button class="btn btn-outline-secondary float-right" (click)="toggleDeleteRequest()"> No </button>
-            </div>
-        </div>
+        <app-delete-toggle [deleteMessage]="'Delete Diaryentry?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
 
         <a routerLink="../../.." class="btn btn-outline-secondary">Back to Diaryentries</a>
     </article>
