--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -28,14 +28,7 @@
             ></app-textfield>
         </div>
 
-        <div class="float-right">
-            <i *ngIf="!isArticleDeleteState" class="btn btn-outline-danger fa fa-trash" (click)="toggleDeleteRequest()"></i>
-            <div *ngIf="isArticleDeleteState" class="delete-request">
-                <span class="mr-3"> <strong>Delete this article?</strong> </span>  
-                <button class="btn btn-outline-danger float-right mr-2" (click)="deleteArticle(item.pk)"> Yes </button>
-                <button class="btn btn-outline-secondary float-right" (click)="toggleDeleteRequest()"> No </button>
-            </div>
-        </div>
+        <app-delete-toggle [deleteMessage]="'Delete '+item.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
 
         <a routerLink="/item" class="btn btn-outline-secondary mr-1">Back to Items</a>
         <a 
