--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -47,14 +47,8 @@
         </div>
 
         <!-- Delete Button -->
-        <div class="float-right">
-            <i *ngIf="!isArticleDeleteState" class="btn btn-outline-danger fa fa-trash" (click)="toggleDeleteRequest()"></i>
-            <div *ngIf="isArticleDeleteState" class="delete-request">
-                <span class="mr-3"> <strong>Delete this article?</strong> </span>  
-                <button class="btn btn-outline-danger float-right mr-2" (click)="deleteArticle(location.pk)"> Yes </button>
-                <button class="btn btn-outline-secondary float-right" (click)="toggleDeleteRequest()"> No </button>
-            </div>
-        </div>
+        <app-delete-toggle [deleteMessage]="'Delete '+location.name+'?'" (deleteEvent)="deleteArticle()"></app-delete-toggle>
+
 
         <!-- Return Buttons -->
         <a routerLink="/location" class="btn btn-outline-secondary mr-1">Back to locations</a>
