--- a/src/app/components/articles/character-article-update/character-article-update.component.html
+++ b/src/app/components/articles/character-article-update/character-article-update.component.html
@@ -2,17 +2,15 @@
     <article class="mb-5">
         <!-- Heading -->
         <div *ngIf="formState===constants.updateState && model; else createState">
-            <a routerLink="/character/{{model.name}}">
-                <i class="btn btn-outline-secondary icon fa fa-times float-right" id="article"></i>
-            </a>
+            <app-edit-toggle [isInUpdateState]=true [link]="'..'"></app-edit-toggle>
+
             <h2 class="text-center">
                 Updating Character {{ model.name }}
             </h2>
         </div>
         <ng-template #createState>
-            <a routerLink="">
-                <i class="btn btn-outline-secondary icon fa fa-times float-right" id="article"></i>
-            </a>
+            <app-edit-toggle [isInUpdateState]=true [link]="'/character'"></app-edit-toggle>
+
             <h2 class="text-center">
                 Creating a new character
             </h2>
