--- a/src/app/components/articles/character-article/character-article.component.html
+++ b/src/app/components/articles/character-article/character-article.component.html
@@ -1,8 +1,7 @@
 <div class="main">
     <article *ngIf="character; else loading">
-        <a routerLink="/character/{{character.name}}/update">
-            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
-        </a>
+        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+
         <h1 class="text-center subheading">
             <span *ngIf="character.title">{{ character.title }} - </span>
             {{ character.name }}
