--- a/src/app/components/articles/creature-article/creature-article.component.html
+++ b/src/app/components/articles/creature-article/creature-article.component.html
@@ -1,8 +1,7 @@
 <div class="main">
     <article *ngIf="creature; else loading">
-        <a routerLink="/{{articleType}}/{{creature.name}}/update">
-            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
-        </a>
+        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+
         <h1 class="text-center"> {{ creature.name }} </h1>
 
         <app-image-gallery
