--- a/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
+++ b/src/app/components/articles/diaryentry-article/diaryentry-article.component.html
@@ -1,8 +1,7 @@
 <div class="main">
     <article *ngIf="diaryEntry; else loading">
-        <a routerLink="update">
-            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
-        </a>
+        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+
         <h1 class="text-center">
             Diary Entry #
             <a routerLink="../../../../session/{{diaryEntry.session_details.session_number}}/{{diaryEntry.session_details.is_main_session_int}}">
