--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -1,9 +1,8 @@
 <div class="main">
     <article *ngIf="item; else loading">
         <!-- Heading -->
-        <a routerLink="update">
-            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
-        </a>
+        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+
         <h1 class="text-center"> {{ item.name }} </h1>
         <p
         *ngIf="item.owner_details" 
