--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -1,9 +1,8 @@
 <div class="main">
     <article *ngIf="location; else loading">
         <!-- Heading -->
-        <a routerLink="update">
-            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
-        </a>
+        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+
         <h1 class="text-center"> {{ location.name }} </h1>
         <!-- String indicating all parent_locations -->
         <p
