--- a/src/app/components/articles/organization-article/organization-article.component.html
+++ b/src/app/components/articles/organization-article/organization-article.component.html
@@ -1,9 +1,8 @@
 <div class="main">
     <article *ngIf="organization; else loading">
         <!-- Heading -->
-        <a routerLink="update">
-            <i class="btn btn-outline-secondary icon fa fa-pencil float-right" id="edit-article"></i>
-        </a>
+        <app-edit-toggle [isInUpdateState]=false [link]="'update'"></app-edit-toggle>
+
         <h1 class="text-center"> {{ organization.name }} </h1>
         <div>
             <div class="text-center subheading mb-1"> 
