--- a/src/app/components/articles/rules/rules.component.html
+++ b/src/app/components/articles/rules/rules.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-    <article>
+    <article *ngIf="rules; else loading">
         <h1 class="text-center">Rules</h1>
         <div *ngFor="let rule of rules; let i = index" class="card mb-3 px-4 pt-3 pb-1">
             <h5 class="pointer" (click)="togglePanel(i)"> 
@@ -13,4 +13,5 @@
         </div>
 
     </article>
+    <ng-template #loading class="mb-4"> <app-spinner></app-spinner> </ng-template> 
 </div>
