--- a/src/app/components/utility/location-accordion/location-accordion.component.html
+++ b/src/app/components/utility/location-accordion/location-accordion.component.html
@@ -12,22 +12,22 @@
         </ng-template>
         <!-- Body -->
         <ng-template ngbPanelContent>
-            <div class="location-character mb-4" *ngIf="location.characters.length > 0">
-                <h5 class="mr-4"> Characters: </h5>
-                <div class="d-flex align-items-center flex-wrap">
-                    <span class="badge badge-secondary mr-2 p-2 mb-1" *ngFor="let character of location.characters">
-                        <a routerLink="/character/{{character.name}}">{{ character.name }}</a>
-                    </span>
-                </div>
-            </div>
             <!-- Description -->
-            <div class="mb-1">
+            <div class="mb-4">
                 <app-textfield 
                 [initialText]="location.description"
                 [heading]="location.name"
                 (updateText)="onSublocationUpdate($event, i)"
                 ></app-textfield>
-            </div>        
+            </div> 
+            <div class="location-character mb-1" *ngIf="location.characters.length > 0">
+                <span class="mr-4"> Characters: </span>
+                <span class="d-inline-flex align-items-center flex-wrap">
+                    <span class="badge badge-secondary mr-2 p-1 mb-1" *ngFor="let character of location.characters">
+                        <a routerLink="/character/{{character.name}}">{{ character.name }}</a>
+                    </span>
+                </span>
+            </div>       
         </ng-template>
 
     </ngb-panel>
