Added Session Audio Overview

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
                 </a>
             </li>
             <!-- Session Audio -->
-            <li class="nav-item mr-3 ml-3" routerLink="/rules">
+            <li class="nav-item mr-3 ml-3" routerLink="/sessionaudio">
                 <a class="button nav-link"> 
                     <span class="d-md-none nav-link-text mr-3">Session Audio</span> 
                     <i class="fa fa-file-audio-o fa-2x" aria-hidden="true"></i> 
