Changed styles around

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,8 +7,10 @@
         <div class="content">
             <div class="inner">
                 <h1>Aldrune</h1>
-                <p><b> A campaign made by Samuel Day and recorded by Philipp Dörner <br>
-                    Through the eyes of Relentless.</b></p>
+                <p class="bold"> 
+                    A campaign made by Samuel Day and recorded by Philipp Dörner <br>
+                    Through the eyes of Relentless.
+                </p>
             </div>
         </div>
         <nav>
