--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -380,5 +380,10 @@ body.is-preload #header .content .inner {
 
 .article-link{
     color: white;
+    font-weight: bold;
+}
+
+.bold{
+    font-weight:bold;
 }
 
