--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-dark navbar-expand-md">
+<nav class="navbar navbar-dark bg-dark navbar-expand-md p-0">
     <!-- Brand -->
     <a routerLink="" class="navbar-brand mr-5 ml-5"><strong> Aldrune Wiki </strong></a>
     <!-- Collapsed navbar toggle -->
