--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -8,13 +8,15 @@
                 <div class="col-lg-3" *ngFor="let sessionAudio of sessionAudioFiles">
                     <div class="card my-3">
                         <div class="card-header"> 
-                            <h3 class="text-center card-title ">{{ sessionAudio.name }}</h3>
+                            <h4 class="text-center card-title ">{{ sessionAudio.name }}</h4>
                         </div>
                         <div class="card-body d-flex justify-content-center flex-column">
-                            <a class="text-center btn btn-primary"> 
+                            <a href="{{constants.wikiUrl}}{{sessionAudio.download_url}}" 
+                                class="text-center btn btn-primary"> 
                                 <strong> Download </strong> 
                             </a>
-                            <a class="text-center btn btn-primary"> 
+                            <a routerLink="{{sessionAudio.session_details.is_main_session_int}}/{{sessionAudio.session_details.session_number}}" 
+                               class="text-center btn btn-primary"> 
                                 <strong> Stream </strong> 
                             </a>
                         </div>
