--- a/src/app/components/utility/delete-toggle/delete-toggle.component.html
+++ b/src/app/components/utility/delete-toggle/delete-toggle.component.html
@@ -1,5 +1,7 @@
 <div class="float-right">
-    <i *ngIf="!isInDeleteState" class="btn btn-outline-danger fa fa-trash" (click)="toggleDeleteState()"></i>
+    <div *ngIf="!isInDeleteState" class="btn btn-outline-danger" (click)="toggleDeleteState()">
+        <i class="fa fa-trash"></i>
+    </div>
     <div *ngIf="isInDeleteState" class="delete-request">
         <span class="mr-3"> <strong>{{deleteMessage}}</strong> </span>  
         <button class="btn btn-outline-danger float-right mr-2" (click)="emitDeleteEvent()"> Yes </button>
