--- a/src/app/components/utility/edit-toggle/edit-toggle.component.html
+++ b/src/app/components/utility/edit-toggle/edit-toggle.component.html
@@ -1,3 +1,3 @@
-<a routerLink="{{link}}">
-    <i [ngClass]="{'btn btn-outline-secondary icon fa float-right': true, 'fa-pencil': !isInUpdateState, 'fa-times': isInUpdateState}" id="edit-article"></i>
+<a routerLink="{{link}}" class="btn btn-secondary float-right">
+    <i [ngClass]="{'fa': true, 'fa-pencil': !isInUpdateState, 'fa-times': isInUpdateState}" id="edit-article"></i>
 </a>
