--- a/src/app/components/articles/quest-overview/quest-overview.component.html
+++ b/src/app/components/articles/quest-overview/quest-overview.component.html
@@ -31,7 +31,7 @@
                         <!-- Quest Name Column -->
                         <td>
                             <a id="quest{{ quest.pk }}" routerLink="{{quest.name}}">
-                                <b> {{ quest.name }}</b>
+                                 <span class="bold">{{ quest.name }}</span>
                             </a>
                         </td>
                         <!-- Quest Abstract -->
