--- a/src/app/components/articles/session-audio/session-audio.component.scss
+++ b/src/app/components/articles/session-audio/session-audio.component.scss
@@ -25,7 +25,6 @@
     font-weight: bold;
     color:#1e66b3 !important;
     border-bottom: none;
-    font-size: 1.1rem;
 }
 
 .delete-timestamp{
@@ -35,6 +34,10 @@
 
 .timestamp-box:hover .delete-timestamp{
     opacity: 1;
+}
+
+.timestamp-box{
+    font-size: 1.2rem;
 }
 
 .hover-green{
