Added location substring with hyperlinks

--- a/src/app/components/utility/location-accordion/location-accordion.component.scss
+++ b/src/app/components/utility/location-accordion/location-accordion.component.scss
@@ -22,5 +22,9 @@
 }
 
 .badge a:hover{
-    color: darkblue !important;
+    color: gray !important;
+}
+
+.badge-secondary{
+    background-color: rgba(27, 31, 34, 1);
 }
