--- a/src/app/components/articles/location-article/location-article.component.html
+++ b/src/app/components/articles/location-article/location-article.component.html
@@ -5,7 +5,15 @@
 
         <h1 class="text-center"> {{ location.name }} </h1>
         <!-- String indicating all parent_locations -->
-        <p *ngIf="location.parent_location" class="text-center mb-5 font-italic"> {{location.name_full}} </p>
+        <p *ngIf="location.parent_location_list.length > 0" class="text-center font-italic mb-5">
+            <span *ngFor="let loc of location.parent_location_list; let i = index"> 
+                <a routerLink="{{buildLocationRoute(i)}}">
+                    {{loc}}
+                </a>
+                <i class="fa fa-arrow-right mx-1"></i>
+            </span>
+            {{location.name}}
+        </p>
 
         <!-- Image Gallery -->
         <app-image-gallery
