Added ways to create and update markers, removed superfluous console.logs and made labels bold as well as fixed an issue with deleting encountertoggle

--- a/src/app/components/articles/encounter/encounter.component.html
+++ b/src/app/components/articles/encounter/encounter.component.html
@@ -9,7 +9,7 @@
             </div>
             <div class="d-flex">
                 <span class="w-25 bold">Location: </span> 
-                <a routerLink="/location/{{encounter.location_details.parent_location_name}}">
+                <a routerLink="/location/{{encounter.location_details.parent_location_name}}/{{encounter.location_details.name}}">
                     {{encounter.location_details.name}}
                 </a>
             </div>
