--- a/src/styles.scss
+++ b/src/styles.scss
@@ -247,6 +247,10 @@ h2{
     font-size: 1.5em;
 }
 
+.bold{
+	font-weight: bold;
+}
+
 .text-decoration-underline{
 	text-decoration: underline;
 }
@@ -275,6 +279,10 @@ h2{
 
 p{
 	letter-spacing: 0.05rem;
+}
+
+label{
+	font-weight: bold;
 }
 
 .pointer{
